Fixed feedback from checkpoint 6 ( but actually this time ) (#47)
checkpoint 6 feedback