@@ -17,7 +17,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.stream.Collectors;
 
-// Multi-threaded implementation that divides computation across threads for one full run
 public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
 
     private static final int THREAD_LIMIT = 5;
@@ -34,16 +33,16 @@ public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
             if (inputPath == null || inputPath.trim().isEmpty()) {
                 return new ProcessResult(false, "Input source cannot be null or empty");
             }
+
             if (!Files.exists(Paths.get(inputPath))) {
                 return new ProcessResult(false, "Input file does not exist: " + inputPath);
             }
 
-            // Read input numbers from file
             List<Integer> inputData = Files.lines(Paths.get(inputPath))
-                    .map(String::trim)
-                    .filter(s -> !s.isEmpty())
-                    .map(Integer::parseInt)
-                    .collect(Collectors.toList());
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .map(Integer::parseInt)
+                .collect(Collectors.toList());
 
             if (inputData.isEmpty()) {
                 return new ProcessResult(false, "No input numbers provided");
@@ -59,37 +58,29 @@ public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
             ExecutorService executor = Executors.newFixedThreadPool(THREAD_LIMIT);
             List<Future<String>> results = new ArrayList<>();
 
-            // Split computation across multiple threads
             for (int number : inputData) {
                 results.add(executor.submit(() -> {
                     ComputeRequest computeRequest = () -> number;
                     ComputeResult computeResult = computeEngine.computeCollatz(computeRequest);
+
                     if (!computeResult.isSuccess()) {
                         throw new RuntimeException("Computation failed for " + number);
                     }
-                    String seq = computeResult.getSequence().replace(",", delimiter);
-                    System.out.println("Thread " + Thread.currentThread().getName() + " processed: " + number);
-                    return seq;
+
+                    return computeResult.getSequence().replace(",", delimiter);
                 }));
             }
 
-            // Collect results
-            StringBuilder resultBuilder = new StringBuilder();
+            List<String> outputLines = new ArrayList<>();
             for (Future<String> f : results) {
-                resultBuilder.append(f.get()).append(System.lineSeparator());
+                outputLines.add(f.get());
             }
 
             executor.shutdown();
 
-            // Write results to file
-            String finalOutput = resultBuilder.toString().trim() + System.lineSeparator();
-            Files.writeString(Paths.get(outputPath), finalOutput);
-
-            System.out.println("Computation Results:");
-            System.out.print(finalOutput);
+            Files.write(Paths.get(outputPath), outputLines);
 
             return new ProcessResult(true, "Data processed successfully");
-
         } catch (Exception e) {
             return new ProcessResult(false, "Data storage error: " + e.getMessage());
         }
